--- a/static/index.html
+++ b/static/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reverse Search Engine: Human Perspective</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <script src="scripts.js"></script>
 </head>
 <body>
 
